tests/parser/valid/statements/while.src
fn sum(int n) -> int {
    int result = 0;
    int i = 1;
    while (i <= n) {
        result = result + i;
        i = i + 1;
    }
    return result;
}
