tests/parser/invalid/syntax_errors/bbb.src
fn test(){
    int y=10;
    if (y>>0)
        return y;
}
